# CareSight

risk-engine/: .dvcignore  .gitignore  CI_CD_README.md  DASHBOARD_FIXED.md  DASHBOARD_README.md  DASHBOARD_WINDOWS_GUIDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_SUMMARY.md  README.md  docker-compose.yml  dvc.yaml  pyproject.toml  requirements.txt  run_dashboard.bat
risk-engine/.github/workflows/: ci.yml
risk-engine/configs/: data.yaml  features.yaml  model_lightgbm.yaml  thresholds.yaml
risk-engine/sample_data/: conditions.csv  encounters.csv  medications.csv  observations.csv  patients.csv
risk-engine/scripts/: automated_retraining.py  check_drift.py  generate_sample_data.py  quick_dashboard_test.py  run_dashboard.py  run_monitoring.py  test_api.py  test_dashboard.py  test_explainability.py  test_mlflow.py  test_monitoring.py
risk-engine/src/: __init__.py
risk-engine/src/common/: config.py  io.py  logging.py
risk-engine/src/dashboards/: __init__.py  streamlit_app.py
risk-engine/src/data/: build_cohort.py  make_labels.py  merge_training_table.py
risk-engine/src/explain/: __init__.py  shap_explainer.py
risk-engine/src/features/: rolling_stats.py
risk-engine/src/models/: calibrate.py  evaluate.py  train_lgbm.py
risk-engine/src/monitoring/: __init__.py  drift_detection.py  mlflow_integration.py
risk-engine/src/serving/: __init__.py  api_models.py  fastapi_app.py
risk-engine/tests/: test_api.py  test_evaluate.py  test_features.py  test_leakage.py
